# library-reach-analysis

./: .dockerignore  .env.example  .gitignore  Dockerfile  READMD.md  README.md  docker-compose.yml  index.html  package-lock.json  package.json  playwright.config.cjs  project-description.md  pyproject.toml
.github/workflows/: tests.yml
config/: default.yaml
config/scenarios/: after_school.yaml  weekday.yaml  weekend.yaml
data/catalogs/: README.md  libraries.csv  outreach_candidates.csv
demo-app/: index.html  package.json
demo-app/src/: main.js
docs/: 00_overview.md  01_phase1_bootstrap.md  02_phase2_loading.md  03_phase3_ingestion.md  04_phase4_spatial.md  10_ops.md
scripts/: backup.sh  test_all.sh  update_readmd.py  update_readme.py
src/libraryreach/: __main__.py  cache.py  cli.py  daemon.py  log.py  pipeline.py  run_meta.py  settings.py
src/libraryreach/api/: main.py  patch_validation.py  schemas.py  summary.py  summary_cache.py
src/libraryreach/catalogs/: build_libraries.py  load.py  validate.py  validators.py
src/libraryreach/data/: outputs_schema.py
src/libraryreach/ingestion/: fetch_stops.py  fetch_youbike.py  http_download.py  open_data.py  sources_index.py  tdx_client.py
src/libraryreach/planning/: deserts.py  outreach.py
src/libraryreach/scoring/: accessibility.py  (+2 more)
tests/: conftest.py  test_api_summary.py  test_catalogs_load.py  test_catalogs_validation.py  test_ingestion_fetch_stops.py  test_ingestion_tdx_client.py  test_scoring.py  test_sources_index.py  test_spatial.py
tests/e2e/: e2e_utils.js  screenshots.spec.js  smoke.spec.js
(+38 files in other folders)
